--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<span class="icon fa-gem"></span>
+							<span class="image face"><img src="images/face.jpg" alt="" /></span>
 						</div>
 						<div class="content">
 							<div class="inner">
@@ -53,14 +53,22 @@
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Work</h2>
-                                <p>SurgeonX - July 2022- Present
+                                <h3 class="major">
+                                SurgeonX - July 2022- Present
+                                </h3>
+                                <p>
 Machine learning concept designer: Worked with big data to train neural networks, analyzing their performance and the possibility of their use in health care systems.
                                 </p>
-                                <p>Zafin - November 2021 - Present
+                                <h3 class="major">
+                                Zafin - November 2021 - Present
+                                </h3>
+                                <p>
 Incident automation specialist: Working with a team to implement incident automation with Jira through the agile method. Simplified the process from incident creation to incident solution through various scripts in python and golang. Participated in meetings and live demonstrations of the automation.
                                 </p>
-                                <p>
+                                <h3 class="major">
                                 Zafin - June 2021 - September 2021
+                                </h3>
+                                <p>
 Status automation specialist: created dashboards that could be accessed through any browser and would display the status of Zafin products through interfacing databases with the web securely. Ensure robust design such that each request is filtered and displayed in an understandable manner.
                                 </p>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
